--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "axios": "^1.5.0",
     "core-js": "^3.29.0",
     "highcharts": "^11.1.0",
     "highcharts-vue": "^1.4.3",
