--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -43,4 +43,4 @@ jobs:
         run: terraform init -backend-config="bucket=${AWS_BUCKET_NAME}" -backend-config="key=${AWS_BUCKET_KEY_NAME}" -backend-config="region=${AWS_REGION}"
 
       - name: Destroy Infrastructure
-        run: terraform destroy -auto-approve -input=false
+        run: terraform destroy -auto-approve -input=false -no-color -var "SES_EMAIL=${SES_EMAIL}"
