--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -64,4 +64,6 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+        env:
+          SES_EMAIL: ${{ secrets.SES_EMAIL }}
+        run: terraform apply -auto-approve -input=false -no-color -var "SES_EMAIL=${SES_EMAIL}"
