--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -52,6 +52,10 @@ jobs:
         id: validate
         run: terraform validate -no-color
 
+      - name: Get PWD
+        id: getPWD
+        run: pwd
+
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color
